секция хедер сделана добавлена секция хиро и начата над ней работа

--- a/index.html
+++ b/index.html
@@ -13,18 +13,39 @@
 </head>
 <body>
     <header class="header">
-        <a href="" class="logo">
-            <img src="" alt="" class="logo__img">
-            Алготрейдинг
-    </a>
-    <nav class="navigation header__navigation">
-        <a href="" class="nav-item">Обучение торговле</a>
-        <a href="" class="nav-item">Аналитика</a>
-        <a href="" class="nav-item">О проекте</a>
-    </nav>
-    <a href="tel:+74959999999" class="phone contacts__phone">
-        +7 (495) 999-99-99
-    </a>
+        <div class="container">
+            <div class="menu">
+                <a href="#" class="logo">
+                    <img src="img/img@1X (1).png" alt="" class="logo__img">
+                    <p class="logo__text">алготрейдинг</p>
+                </a>
+                <nav class="nav header__nav">
+                    <a href="" class="nav-item">Обучение торговле</a>
+                    <a href="" class="nav-item">Аналитика</a>
+                    <a href="" class="nav-item">О проекте</a>
+                </nav>
+                <a href="tel:+74959999999" class="phone contacts__phone">
+                    8 (495) <span class="phone__bold">999-99-99</span>
+                </a>
+            </div>
+        </div>
     </header>
+    <!-- это хедер закончился -->
+    <main>
+        <section class="section hero">
+            <div class="container">
+                <h1 class="title hero__title">Курс алготрейдинга</h1>
+                <h2 class="hero__title-mini">обучение алгоритмической торговле</h2>
+                <p class="text hero__text">Всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
+                <div class="hero__buttonsandtxt">
+                    <div class="hero__buttons">
+                        <button class="button buttonsandtxt__button button__primary">Начать обучение</button>
+                        <button class="button buttonsandtxt__button button__secondary">узнать подробнее</button>
+                    </div>
+                    <p class="txt buttonsandtxt__txt">Ваш собственный прибыльный торговый робот за 30 дней!</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
