--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
             <div class="container">
                 <h1 class="title hero__title">Курс алготрейдинга</h1>
                 <h2 class="hero__title-mini">обучение алгоритмической торговле</h2>
-                <p class="text hero__text">Всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
+                <p class="txt hero__text">Всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
                 <div class="hero__buttonsandtxt">
                     <div class="hero__buttons">
-                        <button class="button buttonsandtxt__button button__primary">Начать обучение</button>
-                        <button class="button buttonsandtxt__button button__secondary">узнать подробнее</button>
+                        <button class="button hero__buttonsandtxt__button button__primary">Начать обучение</button>
+                        <button class="button hero__buttonsandtxt__button button__secondary">узнать подробнее</button>
                     </div>
-                    <p class="txt buttonsandtxt__txt">Ваш собственный прибыльный торговый робот за 30 дней!</p>
+                    <p class="txt hero__buttonsandtxt__txt">Ваш собственный прибыльный торговый робот за <span class="txt__span-hero">30 дней!</span></p>
                 </div>
             </div>
         </section>
+        <!-- здесь хиро все больше нету -->
     </main>
 </body>
 </html>
