секция инфо законченна полностью

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="menu">
                 <a href="#" class="logo">
-                    <img src="img/img@1X (1).png" alt="" class="logo__img">
+                    <img src="img/webp/logo.webp" alt="" class="logo__img">
                     <p class="logo__text">алготрейдинг</p>
                 </a>
                 <nav class="nav header__nav">
@@ -42,11 +42,33 @@
                         <button class="button hero__buttonsandtxt__button button__primary">Начать обучение</button>
                         <button class="button hero__buttonsandtxt__button button__secondary">узнать подробнее</button>
                     </div>
-                    <p class="txt hero__buttonsandtxt__txt">Ваш собственный прибыльный торговый робот за <span class="txt__span-hero">30 дней!</span></p>
+                    <p class="txt hero__buttonsandtxt__txt">Ваш собственный прибыльный торговый робот за <span class="span span-hero">30 дней!</span></p>
                 </div>
             </div>
         </section>
         <!-- здесь хиро все больше нету -->
+        <section class="section info">
+            <div class="container info_div">
+                <strong class="title strong strong__title">Почему робот?</strong>
+                <div class="row">
+                    <div class="col-50">
+                        <h2 class="title info__percent">95<span class="span span-percent">%</span></h2>
+                        <h3 class="title info__percent-title">Увеличение прибыли на финансовых рынках</h3>
+                        <p class="txt info__percent-txt">Отсутсвие эмоций у робота позволяет в разы увеличить эффективность</p>
+                    </div>
+                    <div class="col-25 magnifier">
+                        <img src="img/webp/magnifier.webp" alt="" class="img magnifier__img">
+                        <h3 class="title info__title-25"><span class="span--bold">Глубокий</span> анализ и скорость</h3>
+                        <p class="txt info__txt-25">Полноценный анализ финансовых инструментов по разработанным математическим алгоритмам за доли секунд</p>
+                    </div>
+                    <div class="col-25 gear">
+                        <img src="img/webp/gear__wheel.webp" alt="" class="img gear__img">
+                        <h3 class="title info__title-25"><span class="span--bold">Максимальный</span> инструментарий</h3>
+                        <p class="txt info__txt-25">Отслеживайте тысячи финансовых инструментов каждую секунду с минимальными рисками</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
