все еще не сделаны формы но сделана секция с видео женщиной омг

--- a/index.html
+++ b/index.html
@@ -147,6 +147,45 @@
                 <div class="swiper-button-next"></div>
             </div>
         </section>
+        <section class="section stages">
+           <div class="container stages__div">
+                <div class="rectangle"> 
+
+                </div>
+                <h2 class="title stages__title"><strong class="strong--bold">Все</strong> очень просто</h2>
+                <p class="txt stages__txt-big">Никаких лишних движений во время обучения. Мы с Вами будем четко следовать по разработанной нами карте обучения</p>
+                <div class="rectangle">     
+                </div>
+                <p class="txt stages__txt">Создание робота</p>
+                <div class="rectangle">
+
+                </div>
+                <p class="txt stages__txt">Внедрение</p>
+                <div class="rectangle">
+
+                </div>
+                <p class="txt stages__txt">Оптимизация</p>
+                <div class="rectangle">
+
+                </div>
+                <p class="txt stages__txt">Запуск</p>
+                <div class="rectangle">
+
+                </div>
+                <p class="txt stages__txt stages__txt-last">Прибыль</p>
+               <div class="video stages__video">
+                    <img src="img/webp/circl.webp" alt="" class="img stages__img">
+               </div>
+               <div class="real__div">
+                   <h3 class="title real__title span--bold">Реальный пример работы алгоритма</h3>
+                   <p class="txt real__txt">Меня с детства интересовал анализ процессов, которые происходят в мире финансов. Именно этот интерес меня подтолкнул получить высшее образование в сфере экономико-математического моделирования.</p>
+                   <button class="button real__button button__primary">Приступить к созданию своего доходного робота</button>
+               </div>
+           </div>
+        </section>
+        <section class="section training">
+            
+        </section>
     </main>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
