--- a/index.html
+++ b/index.html
@@ -893,10 +893,12 @@
                         <div class="price__col">
                             <h3 class="title price__col-title span--bold">Gold</h3>
                             <strong class="span price__col-strong">$297</strong>
+                            <div>
                             <p class="txt price__col-txt">Начитка лекций</p>
                             <p class="txt price__col-txt">Практика</p>
                             <p class="txt price__col-txt">Ответы на вопросы</p>
                             <p class="txt price__col-txt price__col-txt-last">Тех.поддержка</p>
+                            </div>
                             <button class="button price__col-button button__secondary b-one">Купить</button>
                         </div>
                     </div>
@@ -904,9 +906,11 @@
                         <div class="price__col">
                             <h3 class="title price__col-title span--bold">Premium</h3>
                             <strong class="span price__col-strong">$497</strong>
+                           <div>
                             <p class="txt price__col-txt">Обучение с куратором</p>
                             <p class="txt price__col-txt ">Постоянная возможность связаться с преподователем</p>
                             <p class="txt price__col-txt price__col-txt-last">Практика</p>
+                           </div>
                             <button class="button price__col-button button__secondary b-two">Купить</button>
                         </div>
                     </div>
@@ -914,10 +918,12 @@
                         <div class="price__col">
                             <h3 class="title price__col-title span--bold">VIP</h3>
                             <strong class="span price__col-strong">$997</strong>
-                            <p class="txt price__col-txt">Полностью индивидуальное обучение!</p>
+                            <div>
+                                <p class="txt price__col-txt">Полностью индивидуальное обучение!</p>
                             <p class="txt price__col-txt">Индивидуальная программа</p>
                             <p class="txt price__col-txt">Ответы на вопросы</p>
                             <p class="txt price__col-txt price__col-txt-last">Максимум практики</p>
+                            </div>
                             <button class="button price__col-button button__secondary b-three">Купить</button>
                         </div>
                     </div>
@@ -1108,11 +1114,11 @@
                     <a href="#" class="footer__link">Записаться на курс</a>
                 </div>
                 <div class="footer__column footer__column__links">
-                    <a href="#" class="footer__link__logo__fb"></a>
-                    <a href="#" class="footer__link__logo__vk"></a>
-                    <a href="#" class="footer__link__logo__yt"></a>
-                    <a href="#" class="footer__link__logo__ig"></a>
-                    <a href="#" class="footer__link__logo__tt"></a>
+                    <a href="#" class="footer__link__logo footer__link__logo__fb"></a>
+                    <a href="#" class="footer__link__logo footer__link__logo__vk"></a>
+                    <a href="#" class="footer__link__logo footer__link__logo__yt"></a>
+                    <a href="#" class="footer__link__logo footer__link__logo__ig"></a>
+                    <a href="#" class="footer__link__logo footer__link__logo__tt"></a>
                 </div>
             </div>
         </div>
